# tensor-alive

./: .gitignore  CMakeLists.txt  PROJECT.md  README.md  STYLE.md
.githooks/: pre-commit
eval/: analyze_results.py  config.py  extract_functions.py  preprocess.py  run_eval.py  synth_benchmarks.py
fuzz/: diff_test.py  fuzz.py  gen_random.py  mutate.py
src/: main.cpp
src/checker/: EquivalenceChecker.cpp  EquivalenceChecker.h  Result.h
src/ir/: Operation.h  Program.h  TensorType.h
src/parser/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.h
src/smt/: OpEncoder.cpp  OpEncoder.h  ProgramEncoder.cpp  ProgramEncoder.h  TensorEncoder.cpp  TensorEncoder.h  Z3Context.cpp  Z3Context.h
tests/mlir_inputs/: broadcast_add.tgt.mlir  broadcast_double.src.mlir  broadcast_double.tgt.mlir  broadcast_wrong.src.mlir  broadcast_wrong.tgt.mlir  linalg_add.src.mlir  linalg_add.tgt.mlir  linalg_fused.src.mlir  linalg_fused.tgt.mlir  linalg_transpose.src.mlir  linalg_transpose.tgt.mlir  matmul_commute.tgt.mlir  matmul_wrong_order.src.mlir  matmul_wrong_order.tgt.mlir  reduce_sum.tgt.mlir  reduce_sum_vs_max.src.mlir  reduce_sum_vs_max.tgt.mlir  reshape_fold.src.mlir  scalar_add_commute.src.mlir  scalar_add_commute.tgt.mlir  scalar_add_vs_sub.tgt.mlir  scalar_distribute.src.mlir  scalar_distribute.tgt.mlir  scalar_double_neg.src.mlir  scalar_double_neg.tgt.mlir  scalar_mul_commute.src.mlir  scalar_mul_commute.tgt.mlir  tensor_add_commute.src.mlir  tensor_add_commute.tgt.mlir  tensor_add_vs_sub.src.mlir  tensor_add_vs_sub.tgt.mlir  tensor_double_neg.src.mlir  wrong_transpose.src.mlir  (+4 more)
